# pytorch-language-models

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.py
notebooks/: 00 - Data + Tokenization.ipynb  00 - Exploring Data.ipynb  01 - RNN Language Model.ipynb  02 - Multilayer RNN.ipynb  02 - QRNN.ipynb  03 - RNN + Adaptive Softmax.ipynb  03 - RNN Wiki103.ipynb  04 - AWD LSTM.ipynb
pytorch_lm/: __init__.py  training.py
pytorch_lm/models/: __init__.py  awd.py  qrnn.py  rnn.py
